# codeforces

./: .gitignore  BatchSample.cpp  batch  batch-sample.cpp  batch-sample.in  batch.sh  gen  solve.sh  template-solver.cpp  template.cpp
benchmarks/: README.md  cout.cpp
benchmarks/rs-scanners/src/: ebtechscanner.rs  tanakh.rs  watareader.rs  wataxxreader.rs
benchmarks/rs-writers/: Cargo.toml
benchmarks/rs-writers/src/: bufwriter-inlined-macro.rs  bufwriter-inlined.rs  bufwriter.rs  print.rs
chrome-extensions/sample-copy/: contentscript.js  manifest.json  menu.js
lib/cp-lib/: Cargo.toml  rust-toolchain.toml
lib/cp-lib/src/: bipartite_matching.rs  bit.rs  bitmask.rs  dp.rs  gcd.rs  geometry.rs  graph.rs  grid_graph.rs  io.rs  lib.rs  main.rs  matrix.rs  modint.rs  next_permutation.rs  partition.rs  prefix_sum.rs  prime_num.rs  segtree.rs  trie.rs  union_find.rs
lib/solver-template/: Cargo.toml
lib/solver-template/src/: lib.rs  main.rs
scanners/: cin.cpp  scanf.cpp
scanners/rs-scanners/: Cargo.toml
scanners/rs-scanners/src/: proconio.rs  wataxxreader.rs
script/: BatchSample.cpp  BatchSample.in  README.md  template-solver.cpp  template-solver.rs
solutions/: 01Game.cpp  01Game.in  12KGame.cpp  12KGame.in  12KGame.out  505.cpp  505.in  ABGraph.cpp  ABGraph.in  ABGraph.out  ACookieForYou.cpp  ACookieForYou.in  ANDORAndSquareSum.cpp  ANDORAndSquareSum.in  ANDORAndSquareSum.out  ANDSequences.cpp  ANDSequences.in  APileOfStones.cpp  APileOfStones.in  APrank.cpp  APrank.in  ATaleOfTwoLands.cpp  ATaleOfTwoLands.in  AVarietyOfOperations.cpp  AVarietyOfOperations.in  AcaciusAndString.cpp  AcaciusAndString.in  AcaciusAndString.out  Accordion.cpp  Accordion.in  AccurateLee.cpp  AccurateLee.in  AddCandies.cpp  AddCandies.in  AddOnATree.cpp  AddOnATree.in  AddOnATreeRevolution.cpp  AddOnATreeRevolution.in  AddOnATreeRevolution.out  AddOne.cpp  (+1958 more)
solutions/quora2021-div1/: CatCycle.in  DigestRecommendation.cpp  DigestRecommendation.in  DigestRecommendation.out  EasternExhibition.in  Escape.cpp  Escape.in  GuessingTheGreatest.out  KbeautifulStrings.out  Marrays.cpp  Meximization.cpp  Meximization.in  PlanetLapituletti.cpp  PythagoreanTriples.cpp  PythagoreanTriples.in  ShiftingStacks.cpp  ShiftingStacks.in  Students.cpp  Students.in
stdio/: README.md  printf.cpp
stdio/rs-scanners/: Cargo.toml
stdio/rs-scanners/src/: thinputread.rs  watareader.rs
stdio/rs-writers/src/: bufwriter-inlined.rs  bufwriter.rs  print.rs
