[package]
name = "CodeforcesSolutions"
version = "0.1.0"
authors = ["Hiroshi Kori <hiroshi.maybe@gmail.com>"]
edition = "2018"

[dependencies]
# https://github.com/rust-lang-ja/atcoder-rust-base/blob/ja/Cargo.toml
# https://github.com/rust-lang-ja/atcoder-rust-resources/wiki/2020-Update

# 数値型の抽象化、多倍長整数、複素数、分数、及び整数型の拡張
#num = "=0.2.1"
#num-bigint = "=0.2.6"
#num-complex = "=0.2.4"
#num-integer = "=0.1.42"
#num-iter = "=0.1.40"
#num-rational = "=0.2.4"
#num-traits = "=0.2.11"

# `num-traits`の自動実装
#num-derive = "=0.3.0"

# NumPyの`ndarray`のような多次元配列
#ndarray = "=0.13.0"

# 線形代数
#nalgebra = "=0.20.0"

# (線形)代数の抽象化
#alga = "=0.9.3"

# libmのRust実装
#libm = "=0.2.1"

# 乱数
rand = { version = "=0.7.3", features = ["small_rng"] }
#getrandom = "=0.1.14"
#rand_chacha = "=0.2.2"
#rand_core = "=0.5.1"
#rand_hc = "=0.2.0"
#rand_pcg = "=0.2.1"

# 乱数の分布の追加
#rand_distr = "=0.2.2"

# グラフ
#petgraph = "=0.5.0"

# 挿入順を保持するhash table
#indexmap = "=1.3.2"

# 正規表現
#regex = "=1.3.6"

# staticアイテムの遅延初期化
#lazy_static = "=1.4.0"

# `NotNan<f64>`, `OrderedFloat<f64>`
#ordered-float = "=1.0.2"

# ASCII文字列
#ascii = "=1.0.0"

# permutation
#permutohedron = "=0.2.4"

# スライスの拡張
#superslice = "=1.0.0"

# イテレータの拡張
#itertools = "=0.9.0"

# イテレータの拡張（一次元累積和と浮動小数点数の等差数列）
#itertools-num = "=0.1.3"

# `BTreeMap`, `BTreeSet`, `HashMap`, `HashSet`のリテラル用マクロ
#maplit = "=1.0.2"

# 即席enum `Either<L, R>`
#either = "=1.5.3"

# `BTreeMap`, `BTreeSet`, `HashMap`, `HashSet`, `Vec`の永続データ構造版
#im-rc = "=14.3.0"

# 可変長bit set
#fixedbitset = "=0.2.0"

# 可変長bit set
#bitset-fixed = "=0.1.0"

# 競技プログラミングの入出力サポートその1
#proconio = { version = "=0.3.6", features = ["derive"] }

# 競技プログラミングの入出力サポートその2
#text_io = "=0.1.8"

# 競技プログラミングの入出力サポートその3
#whiteread = "=0.5.0"

# 高速なハッシュ関数
#rustc-hash = "=1.1.0"

# ある長さまでは要素を「直に」持つ可変長配列
#smallvec = "=1.2.0"

[[bin]]
name = "a_variety_of_operations"
path = "a_variety_of_operations.rs"

[[bin]]
name = "median_maximization"
path = "median_maximization.rs"

[[bin]]
name = "minmex_cut"
path = "minmex_cut.rs"

[[bin]]
name = "maxmex_cut"
path = "maxmex_cut.rs"

[[bin]]
name = "seating_arrangements"
path = "seating_arrangements.rs"

[[bin]]
name = "take_a_guess"
path = "take_a_guess.rs"
[[bin]]
name = "gamer_hemose"
path = "gamer_hemose.rs"

[[bin]]
name = "hemose_shopping"
path = "hemose_shopping.rs"

[[bin]]
name = "bakry_and_partitioning"
path = "bakry_and_partitioning.rs"

[[bin]]
name = "elections"
path = "elections.rs"

[[bin]]
name = "make_it_divisible_by_25"
path = "make_it_divisible_by_25.rs"

[[bin]]
name = "save_more_mice"
path = "save_more_mice.rs"

[[bin]]
name = "all_are_same"
path = "all_are_same.rs"

[[bin]]
name = "gardener_and_tree"
path = "gardener_and_tree.rs"

[[bin]]
name = "ab_balance"
path = "ab_balance.rs"

[[bin]]
name = "update_files"
path = "update_files.rs"

[[bin]]
name = "banknotes"
path = "banknotes.rs"

[[bin]]
name = "era"
path = "era.rs"

[[bin]]
name = "xor_specialist"
path = "xor_specialist.rs"

[[bin]]
name = "divisible_confusion"
path = "divisible_confusion.rs"

[[bin]]
name = "moderate_modular_mode"
path = "moderate_modular_mode.rs"

[[bin]]
name = "am_deviation"
path = "am_deviation.rs"

[[bin]]
name = "reverse_sort"
path = "reverse_sort.rs"

[[bin]]
name = "dominant_character"
path = "dominant_character.rs"

[[bin]]
name = "treelabeling"
path = "treelabeling.rs"

[[bin]]
name = "mathematical_addition"
path = "mathematical_addition.rs"

[[bin]]
name = "coloring_rectangles"
path = "coloring_rectangles.rs"

[[bin]]
name = "two_arrays"
path = "two_arrays.rs"

[[bin]]
name = "guess_the_permutation"
path = "guess_the_permutation.rs"

[[bin]]
name = "anti_lights_cell_guessing"
path = "anti_lights_cell_guessing.rs"

[[bin]]
name = "kalindrome_array"
path = "kalindrome_array.rs"

[[bin]]
name = "keshi_is_throwing_a_party"
path = "keshi_is_throwing_a_party.rs"

[[bin]]
name = "not_quite_lee"
path = "not_quite_lee.rs"

[[bin]]
name = "closing_the_gap"
path = "closing_the_gap.rs"

[[bin]]
name = "and_its_nonzero"
path = "and_its_nonzero.rs"

[[bin]]
name = "menorah"
path = "menorah.rs"

[[bin]]
name = "integer_diversity"
path = "integer_diversity.rs"

[[bin]]
name = "mirror_in_the_string"
path = "mirror_in_the_string.rs"

[[bin]]
name = "representative_edges"
path = "representative_edges.rs"

[[bin]]
name = "keep_the_average_high"
path = "keep_the_average_high.rs"

[[bin]]
name = "stable_arrangement_of_rooks"
path = "stable_arrangement_of_rooks.rs"

[[bin]]
name = "integers_shop"
path = "integers_shop.rs"

[[bin]]
name = "hidden_permutations"
path = "hidden_permutations.rs"

