[package]
name = "rs-scanners"
version = "0.1.0"
authors = ["Hiroshi Kori <hiroshi.maybe@gmail.com>"]
edition = "2018"

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }

[[bin]]
name = "thinputread"
path = "src/thinputread.rs"

[[bin]]
name = "ebtechscanner"
path = "src/ebtechscanner.rs"

[[bin]]
name = "proconio"
path = "src/proconio.rs"

[[bin]]
name = "watareader"
path = "src/watareader.rs"

[[bin]]
name = "wataxxreader"
path = "src/wataxxreader.rs"
